--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,23 @@
 version: '3.4'
 
 services:
-  adapter:
+  tweaker:
 #    image: 127.0.0.1:5001/tweaker
     build:
       context: src/
     ports:
       - 5000:5000
     restart: always
-
-#    deploy:
-#      placement:
-#        constraints: [node.role == worker]
-#      resources:
-#        limits:
-#          cpus: "1"
-#          memory: 4G
-#      replicas: 1
-#      update_config:
-#        parallelism: 2
-#        delay: 10s
-#      restart_policy:
-#        condition: on-failure
+    deploy:
+      placement:
+        constraints: [node.role == worker]
+      resources:
+        limits:
+          cpus: "1"
+          memory: 8G
+      replicas: 1
+      update_config:
+        parallelism: 2
+        delay: 10s
+      restart_policy:
+        condition: on-failure
