--- a/preprintservice_src/Dockerfile
+++ b/preprintservice_src/Dockerfile
@@ -33,11 +33,11 @@ RUN groupadd slic3r \
   && mkdir -p /Slic3r \
   && chown slic3r:slic3r /Slic3r
 
-ARG SLIC3R_URL
+ARG SLIC3R_VERSION
 RUN apt-get update && apt-get install -y \
   --no-install-recommends \
   && mkdir -p /Slic3r/slic3r-dist \
-  && curl -sSL ${SLIC3R_URL} > /Slic3r/slic3r.tar.bz2 \
+  && curl -sSL ${SLIC3R_VERSION} > /Slic3r/slic3r.tar.bz2 \
   && tar -xjf /Slic3r/slic3r.tar.bz2 -C /Slic3r/slic3r-dist --strip-components 1 \
   && rm -f /Slic3r/slic3r.tar.bz2 \
   && rm -rf /var/lib/apt/lists/* \
@@ -51,13 +51,14 @@ RUN mkdir -p /home/slic3r/.local/share/
 ADD . /src/.
 
 # Clone if Tweaker-3 doesn't exist, and pull.
-RUN rm -r /src/Tweaker-3 \
-  && git clone https://github.com/ChristophSchranz/Tweaker-3 /src/Tweaker-3 \
+RUN ls /src/Tweaker-3/README.md  > /dev/null 2>&1  \
+  || (echo "Tweaker not found, cloning repository" \
+    && git clone https://github.com/ChristophSchranz/Tweaker-3 /src/Tweaker-3) \
   && cd /src/Tweaker-3 \
-  && true || git pull
+  && git pull
 
 # setup proper configuration
 ENV PYTHONPATH /src/.
 ENV WORKDIR /src/
 
-ENTRYPOINT ["python", "/src/tweak-service.py"]
+ENTRYPOINT ["python3", "/src/tweak-service.py"]
